v3.8.0-alpha.1 (XXXX-XX-XX)
---------------------------

* The old metrics api contains the following gauges which should actually be
  counters:
    - arangodb_scheduler_jobs_dequeued
    - arangodb_scheduler_jobs_submitted
    - arangodb_scheduler_jobs_done
  Therefore the new v2 metric api adds the following counters:
    - arangodb_scheduler_jobs_dequeued_total
    - arangodb_scheduler_jobs_submitted_total
    - arangodb_scheduler_jobs_done_total
  These counters are only visible in the new v2 metric and replace the old
  metrics which are suppressed for v2.

* Fix implicit capture of views in a context of JS transaction.


* Introduce metrics for AQL query memory limit violations:
  - `arangodb_aql_global_query_memory_limit_reached`: Total number of times the
    global query memory limit was violated.
  - `arangodb_aql_local_query_memory_limit_reached`: Total number of times a
    local query memory limit was violated.

* Set the default value for `--query.global-memory-limit` to around 90% of RAM,
  so that a global memory limit is now effective by default.

  The default global memory limit value is calculated by a formula depending on
  the amount of available RAM and will result in the following values for 
  common RAM sizes:
  
  RAM:            0      (0MiB)  Limit:            0   unlimited, %mem:  n/a
  RAM:    134217728    (128MiB)  Limit:     33554432     (32MiB), %mem: 25.0
  RAM:    268435456    (256MiB)  Limit:     67108864     (64MiB), %mem: 25.0
  RAM:    536870912    (512MiB)  Limit:    255013683    (243MiB), %mem: 47.5
  RAM:    805306368    (768MiB)  Limit:    510027366    (486MiB), %mem: 63.3
  RAM:   1073741824   (1024MiB)  Limit:    765041049    (729MiB), %mem: 71.2
  RAM:   2147483648   (2048MiB)  Limit:   1785095782   (1702MiB), %mem: 83.1
  RAM:   4294967296   (4096MiB)  Limit:   3825205248   (3648MiB), %mem: 89.0
  RAM:   8589934592   (8192MiB)  Limit:   7752415969   (7393MiB), %mem: 90.2