@@ -4,7 +4,7 @@ help: |
   Number of transactions using sequential locking of collections to avoid deadlocking.
 unit: number
 type: counter
-category: Transaction
+category: Transactions
 complexity: advanced
 exposedBy:
   - coordinator
